--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@ a {
         border: 12px solid rgb(10, 255, 116);
         border-radius: 60%;
     }
+    .yatoimg2 {
+        height:auto;
+        width: 72%;
+        border: 14px solid #ff0000;
+        border-radius: 50%;
+    }
 
 .yato {
     text-align: center;
@@ -25,7 +31,7 @@ a {
 .sylla{
     background-color: #0a52c6;
     margin: 20px;
-    border: 4px solid blueviolet;
+    border: 14px solid rgb(0, 0, 0);
     border-radius: 4%;
     border-top-right-radius: 28%;
 }
