--- a/style.css
+++ b/style.css
@@ -106,3 +106,97 @@ a {
     border: 4px solid rgb(154, 220, 156);
     border-radius: 12%;
 }
+.mypap4 {
+    text-align: center;
+    
+    font-size: 25px;
+    background-color: blue;
+    border-radius: 12%;
+    border-top-right-radius: 20%;
+    border-bottom-left-radius: 20%;
+    margin: 20%;
+    padding : 2%;
+    border: 6px solid rgb(31, 31, 187); 
+}
+.button {
+            display: inline-block;
+            padding: 12px 24px;
+            background-color: #f1f1f1; /* Light coral */
+            color: #1100ff;
+            text-decoration: none;
+            text-align: center;
+            border-radius: 30px;
+            border: none;
+            cursor: pointer;
+            font-size: 36px;
+        }
+        .button2 {
+            display: inline-block;
+            padding: 22px 34px;
+            background-color: #f1f1f1; /* Light coral */
+            color: #000000;
+            text-decoration: none;
+            text-align: center;
+            border-radius: 30px;
+            border: none;
+            cursor: pointer;
+            font-size: 36px;
+        }
+
+
+        .container1 {
+            background-color: #42ff25;
+            padding: 50px;
+            border-radius: 45px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+            text-align: center;
+        }
+        
+        input[type="password"] {
+            padding: 18px 40%; /* Increase padding for a larger box */
+            width: 55px; /* Adjust width for a larger box */
+            height: 49px; /* Adjust height for a larger box */
+            border: 7px solid #ddd;
+            border-radius: 5px;
+            margin-right: 5px;
+            font-size: 30px;
+        }
+
+        .buttonn {
+            padding: 2%;
+            padding-left: 10%;
+            padding-right:10%;
+            background-color: #ff0084;
+            color: #000000;
+            font-size: 40px;
+            border: none;
+            border-radius: 25px;
+            cursor: pointer;
+            
+            transition: background-color 0.5s;
+        }
+        
+        .buttonn:hover {
+            background-color: #00c3ff;
+        }
+        
+        #hiddenContent {
+            display: none;
+            margin-top: 15px;
+            background-color: #000000;
+            color: #00d5ff;
+            font-size: 36px;
+            border-radius: 8%;
+        }
+        
+      .pswd {
+        font-size: 45px;
+        color:rgb(255, 255, 255);
+        background-color: #000000;
+        margin-left: 12%;
+        margin-right: 12%;
+        padding-top: 1%;
+        padding-bottom: 1%;
+        border-radius: 10%;
+      }
+      
