--- a/style.css
+++ b/style.css
@@ -145,10 +145,10 @@ a {
 
 
         .container1 {
-            background-color: #42ff25;
+            background-color: #fa77e4;
             padding: 50px;
             border-radius: 45px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0px 0px 10px rgba(65, 65, 65, 0.2);
             text-align: center;
         }
         
@@ -166,7 +166,7 @@ a {
             padding: 2%;
             padding-left: 10%;
             padding-right:10%;
-            background-color: #ff0084;
+            background-color: #3700ff;
             color: #000000;
             font-size: 40px;
             border: none;
