--- a/styles_oct_version.css
+++ b/styles_oct_version.css
@@ -106,3 +106,28 @@ input[type="password"] {
     text-decoration:none;
     color:white;  
 }
+
+.mypap2 {
+    text-align: center;
+    padding:16px;
+    font-size: 45px;
+    background-color: #2a77f3;
+    border-radius: 12%;
+    border-top-right-radius: 20%;
+    border-bottom-left-radius: 20%;
+    margin: 2px;
+    padding : 4%;
+    border: 6px solid rgb(31, 31, 187); 
+}
+.mypap3 {
+    text-align: center;
+    padding:12px;
+    font-size: 27px;
+    background-color: #619eff;
+    border-radius: 22%;
+    border-top-right-radius: 20%;
+    border-bottom-left-radius: 20%;
+    margin: 60px;
+    padding : 4%;
+    border: 9px solid blue; 
+}
